--- a/kcs-frontend/kcs-frontend/src/components/Header/Header.css
+++ b/kcs-frontend/kcs-frontend/src/components/Header/Header.css
@@ -1,29 +1,15 @@
-.navbar{
-      background-color: black;
-      opacity: 0.78;
-}
-.img{
-      height: 100vh;
-      width: 100%;     
-      background-size: contain;
-      position: absolute;
- 
-}
-.logo{
-      max-width: 150px;
+.grid-container {
+      position: relative;
+      width: 100%;
       height: auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+}
 
-}
-a{
-      color: white;
-      font-size: 20px;
-        
-}
-.log-part{
-      border-color: white;
-      border-width: 1px;
-      border-style: solid;
-      width: 15rem;
-      height: 2rem;
-      text-align: center;
+.grid-container img {
+      max-width: 100%;
+      height: auto;
+      object-fit: cover;
 }
